--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
   <head>
     <title>Sample App</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <style>
+		.content {
+	      	opacity: 0;
+	      	transition: opacity 1s ease-in;
+	    }
+	    .loaded {
+	      	opacity: 1;
+	    }
+	    .input-group {
+	      	margin-bottom: 15px;
+	    }
+	    .clear-complete {
+	      	margin-bottom: 15px;
+    	}
+    </style>
+
   </head>
   <body>
     <div id='root'>
